--- a/byom/pima/BYOM.ipynb
+++ b/byom/pima/BYOM.ipynb
@@ -4,17 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## In-Vantage Scoring via PMML\n",
+    "## BYOM In-Vantage Scoring with PMML and ONNX\n",
     "\n",
-    "As part of the PIMA Diabetes model, we produce a PMML representation of the xgboost model with the following code\n",
+    "In this notebook, we will show you how to work with the Bring Your Own Model (BYOM) pattern and BYOM In-Vantage Scoring. This pattern allows you to use whatever data science platform you want to perform model development and experimentation. You can use the vast majority of popular data science libraries and transformations. The only constraint is that you can convert it to one of the following open formats\n",
     "\n",
-    "```python\n",
-    "from nyoka import xgboost_to_pmml\n",
-    "...\n",
-    "xgboost_to_pmml(pipeline=model, col_names=feature_names, target_name=target_name, pmml_f_name=\"artifacts/output/model.pmml\")\n",
-    "```\n",
+    "- ONNX\n",
+    "- PMML\n",
+    "- H2O (MOJO)\n",
+    "- H2O (Driverless AI)\n",
     "\n",
-    "You can deploy that In-Vantage via the AnalyticOps UI, just as with RESTFul and Batch deployments. This notebook shows you how you can then use this to score models via SQL. "
+    "ONNX is become more popular by the day. It is a very efficient model format which was created and is maintained by Microsoft and its adoption by other companies and libraries as the standard open format is incresingly rapidly. While the name suggests it is primarily related to neural networks, it can be used with most sklearn libraries and algorithms. \n",
+    "\n",
+    "\n",
+    "In this example, we will show you how you can develop in a notebook or other third-party tooling, produce a model and convert it to both `onnx` and `pmml` formats for deploying in Vantage with ModelOps."
    ]
   },
   {
@@ -53,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "Engine(teradatasql://AOA_DEMO:***@3.238.151.85)"
+       "Engine(teradatasql://AOA_MASTER:***@3.238.151.85)"
       ]
      },
      "execution_count": 2,
@@ -62,23 +64,131 @@
     }
    ],
    "source": [
-    "password = getpass.getpass(\"Password\")\n",
+    "username = input(\"Username\")\n",
+    "password = getpass.getpass(\"password\")\n",
     "\n",
-    "create_context(host=\"3.238.151.85\", username=\"AOA_DEMO\", password=password)"
+    "create_context(host=\"3.238.151.85\", username=username, password=password, logmech=\"TDNEGO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('scaler', MinMaxScaler()),\n",
+       "                ('xgb', XGBClassifier(eta=0.2, max_depth=6))])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "\n",
+    "train_pdf = DataFrame.from_query(\"\"\"\n",
+    "SELECT \n",
+    "    F.*, D.hasdiabetes \n",
+    "FROM pima_patient_features F\n",
+    "JOIN pima_patient_diagnoses D\n",
+    "    ON F.patientid = D.patientid\n",
+    "\"\"\").to_pandas(all_rows=True)\n",
+    "\n",
+    "features = [\"NumTimesPrg\", \"Age\", \"PlGlcConc\", \"BloodP\", \"SkinThick\", \"TwoHourSerIns\", \"BMI\", \"DiPedFunc\"]\n",
+    "target = \"HasDiabetes\"\n",
+    "\n",
+    "# split data into X and y\n",
+    "X_train = train_pdf[features]\n",
+    "y_train = train_pdf[target]\n",
+    "\n",
+    "model = Pipeline([('scaler', MinMaxScaler()),\n",
+    "                  ('xgb', XGBClassifier(eta=0.2, max_depth=6))])\n",
+    "\n",
+    "model.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## View Published Models\n",
+    "#### Convert the model to PMML\n",
     "\n",
-    "We can view the models published to vantage by querying the table they are published to. Note this information is available via the AOA APIs also"
+    "You can use the sklearn2pmml or the nyoka python libraries to convert to pmml. The nyoka is a python only package and so it is preferrable. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nyoka import xgboost_to_pmml\n",
+    "\n",
+    "xgboost_to_pmml(pipeline=model, col_names=features, target_name=target, pmml_f_name=\"model.pmml\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Convert the model to ONNX\n",
+    "\n",
+    "We can also convert the model to onnx format. This is a bit more involved as the client libraries for converting from sklearn/xgboost to onnx are not yet as mature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from skl2onnx import to_onnx\n",
+    "from skl2onnx import convert_sklearn, to_onnx, update_registered_converter\n",
+    "from skl2onnx.common.shape_calculator import (\n",
+    "    calculate_linear_classifier_output_shapes,\n",
+    "    calculate_linear_regressor_output_shapes)\n",
+    "from onnxmltools.convert.xgboost.operator_converters.XGBoost import convert_xgboost\n",
+    "from onnxmltools.convert import convert_xgboost as convert_xgboost_booster\n",
+    "\n",
+    "update_registered_converter(\n",
+    "    XGBClassifier, 'XGBoostXGBClassifier',\n",
+    "    calculate_linear_classifier_output_shapes, convert_xgboost,\n",
+    "    options={'nocl': [True, False], 'zipmap': [True, False, 'columns']})\n",
+    "\n",
+    "\n",
+    "model_onnx = to_onnx(model, X_train.astype(np.float32), target_opset=15)\n",
+    "with open(\"model.onnx\", \"wb\") as f:\n",
+    "    f.write(model_onnx.SerializeToString())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import into ModelOps to Operationalize\n",
+    "\n",
+    "Go to the ModelOps UI and import this as a new model version. Then follow the workflow to deploy. Note that you can also import programatically via the ModelOps Python SDK. \n",
+    "\n",
+    "You may be wondering why you can't just directly insert the onnx or pmml model directly into the database table. And the answer is you can. However, with ModelOps, you get full governance around this model deployment, including data drift and model monitoring and alerting. \n",
+    "\n",
+    "\n",
+    "### View Published Models\n",
+    "\n",
+    "Once deployed via ModelOps, we can view the models published to vantage by querying the table they are published to. Note this information is available via the AOA APIs also.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -104,30 +214,30 @@
        "      <th></th>\n",
        "      <th>model_version</th>\n",
        "      <th>model_id</th>\n",
+       "      <th>model_type</th>\n",
        "      <th>project_id</th>\n",
        "      <th>deployed_at</th>\n",
        "      <th>model</th>\n",
-       "      <th>model_type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6f2c99e6-8d05-48e3-953d-bd37ace233b1</td>\n",
-       "      <td>bb5fc499-2112-41e1-9ad2-5ce82ba73645</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2022-05-12 19:25:10.980</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
+       "      <td>e613d303-4fd0-41f1-ba36-39821023e5c1</td>\n",
+       "      <td>6b973430-46f9-42b0-8f42-1b8e23aa2b10</td>\n",
        "      <td>PMML</td>\n",
+       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
+       "      <td>2022-02-01 13:16:01.400</td>\n",
+       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>f49d7cab-ac18-446f-8b26-69f378e7ebe3</td>\n",
-       "      <td>9dd16228-957c-4cc2-bb99-56a3e25fa671</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2022-05-12 19:59:06.980</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
+       "      <td>540fe2b2-d0a6-4843-8d74-9c0c102773ea</td>\n",
+       "      <td>6b973430-46f9-42b0-8f42-1b8e23aa2b10</td>\n",
        "      <td>PMML</td>\n",
+       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
+       "      <td>2022-02-01 15:06:41.000</td>\n",
+       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -135,30 +245,26 @@
       ],
       "text/plain": [
        "                          model_version                              model_id  \\\n",
-       "0  6f2c99e6-8d05-48e3-953d-bd37ace233b1  bb5fc499-2112-41e1-9ad2-5ce82ba73645   \n",
-       "1  f49d7cab-ac18-446f-8b26-69f378e7ebe3  9dd16228-957c-4cc2-bb99-56a3e25fa671   \n",
+       "0  e613d303-4fd0-41f1-ba36-39821023e5c1  6b973430-46f9-42b0-8f42-1b8e23aa2b10   \n",
+       "1  540fe2b2-d0a6-4843-8d74-9c0c102773ea  6b973430-46f9-42b0-8f42-1b8e23aa2b10   \n",
        "\n",
-       "                             project_id             deployed_at  \\\n",
-       "0  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2022-05-12 19:25:10.980   \n",
-       "1  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2022-05-12 19:59:06.980   \n",
+       "  model_type                            project_id             deployed_at  \\\n",
+       "0       PMML  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2022-02-01 13:16:01.400   \n",
+       "1       PMML  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2022-02-01 15:06:41.000   \n",
        "\n",
-       "                                                                                                                                                                                                                                                       model  \\\n",
-       "0  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...   \n",
-       "1  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...   \n",
-       "\n",
-       "  model_type  \n",
-       "0       PMML  \n",
-       "1       PMML  "
+       "                                                                                                                                                                                                                                                       model  \n",
+       "0  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...  \n",
+       "1  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.options.display.max_colwidth = 250\n",
-    "pd.read_sql(\"SELECT TOP 5 * FROM aoa_ivsm_models\", get_connection())"
+    "pd.read_sql(\"SELECT TOP 2 * FROM aoa_byom_models\", get_connection())"
    ]
   },
   {
@@ -301,7 +407,7 @@
     "model_version=\"6f2c99e6-8d05-48e3-953d-bd37ace233b1\"\n",
     "\n",
     "model = DataFrame.from_query(f\"\"\"\n",
-    "SELECT * FROM aoa_ivsm_models \n",
+    "SELECT * FROM aoa_byom_models \n",
     "    WHERE model_version='{model_version}'\n",
     "\"\"\")\n",
     "\n",
@@ -445,7 +551,7 @@
     "query = f\"\"\"\n",
     "SELECT * FROM mldb.PMMLPredict (\n",
     "    ON (SELECT * FROM pima_test) AS DataTable\n",
-    "    ON (SELECT * FROM aoa_ivsm_models \n",
+    "    ON (SELECT * FROM aoa_byom_models \n",
     "            WHERE model_version='{model_version}') AS ModelTable DIMENSION\n",
     "    USING\n",
     "      Accumulate ('patientid')\n",
