--- a/model_definitions/python-diabetes/notebooks/Operationalize.ipynb
+++ b/model_definitions/python-diabetes/notebooks/Operationalize.ipynb
@@ -38,11 +38,13 @@
     }
    ],
    "source": [
-    "from teradataml.dataframe.dataframe import DataFrame\n",
     "from teradataml import create_context\n",
     "import getpass\n",
     "\n",
-    "engine = create_context(host=\"3.238.151.85\", username=\"AOA_MASTER\", password=getpass.getpass(\"password\"))"
+    "username = input(\"Username\")\n",
+    "password = getpass.getpass(\"password\")\n",
+    "\n",
+    "engine = create_context(host=\"3.238.151.85\", username=username, password=password, logmech=\"TDNEGO\")"
    ]
   },
   {
@@ -560,8 +562,8 @@
     "scikit-learn==0.24.2\n",
     "shap==0.36.0\n",
     "matplotlib==3.3.1\n",
-    "teradataml>=17.0.0.4\n",
-    "nyoka>=4.3.0\n",
+    "teradataml==17.0.0.4\n",
+    "nyoka==4.3.0\n",
     "aoa==6.0.0\n",
     "```\n",
     "\n",
