--- a/byom/pima/BYOM.ipynb
+++ b/byom/pima/BYOM.ipynb
@@ -46,17 +46,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Username AOA_MASTER\n",
-      "password ··········\n"
+      "Usernamewf250003\n",
+      "password········\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Engine(teradatasql://AOA_MASTER:***@3.238.151.85/?LOGDATA=%2A%2A%2A&LOGMECH=%2A%2A%2A)"
+       "Engine(teradatasql://wf250003:***@3.238.151.85/?LOGMECH=%2A%2A%2A)"
       ]
      },
      "execution_count": 2,
@@ -68,12 +68,15 @@
     "username = input(\"Username\")\n",
     "password = getpass.getpass(\"password\")\n",
     "\n",
+    "# by default we assume your are using your user database. change as required\n",
+    "database = username\n",
+    "\n",
     "create_context(host=\"3.238.151.85\", username=username, password=password, logmech=\"TDNEGO\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +86,7 @@
        "                ('xgb', XGBClassifier(eta=0.2, max_depth=6))])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +103,7 @@
     "FROM pima_patient_features F\n",
     "JOIN pima_patient_diagnoses D\n",
     "    ON F.patientid = D.patientid \n",
-    "    WHERE patientid MOD 5 <> 0\n",
+    "    WHERE F.patientid MOD 5 <> 0\n",
     "\"\"\").to_pandas(all_rows=True)\n",
     "\n",
     "features = [\"NumTimesPrg\", \"Age\", \"PlGlcConc\", \"BloodP\", \"SkinThick\", \"TwoHourSerIns\", \"BMI\", \"DiPedFunc\"]\n",
@@ -142,12 +145,18 @@
    "source": [
     "#### Convert the model to ONNX\n",
     "\n",
-    "We can also convert the model to onnx format. This is a bit more involved as the client libraries for converting from sklearn/xgboost to onnx are not yet as mature."
+    "We can also convert the model to onnx format. This is a bit more involved as the client libraries for converting from sklearn/xgboost to onnx are not yet as mature.\n",
+    "\n",
+    "```\n",
+    "onnx==1.10.2\n",
+    "skl2onnx==1.11.2\n",
+    "onnxruntime==1.9.0\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,20 +234,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>f05681c6-de92-4ee5-a5af-d8c7e842dd0d</td>\n",
-       "      <td>81ed9846-2d30-488b-ae0c-85df09376314</td>\n",
-       "      <td>PMML</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2022-04-20 20:30:04.130</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\r\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\r\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\r\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"...</td>\n",
+       "      <td>152b6ef8-33a5-4740-b68b-093baad1284a</td>\n",
+       "      <td>2a35e4bc-8a6d-4643-9bdd-dedbb73d28d5</td>\n",
+       "      <td>ONNX</td>\n",
+       "      <td>604eb52c-a12f-440e-b013-57956dcec9d5</td>\n",
+       "      <td>2022-07-06 18:50:30.730</td>\n",
+       "      <td>b'\\x08\\x08\\x12\\x08skl2onnx\\x1a\\x061.10.3\"\\x07ai.onnx(\\x002\\x00:\\xc8\\xa7\\x08\\n\\xb5\\x01\\n\\x0bNumTimesPrg\\n\\x03Age\\n\\tPlGlcConc\\n\\x06BloodP\\n\\tSkinThick\\n\\rTwoHourSerIns\\n\\x03BMI\\n\\tDiPedFunc\\x12\\x0cconcatenated\\x1a\\x11FeatureVectorizer\"\\x11FeatureV...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7edae1b8-e60e-47f4-a497-b94f2958d5b9</td>\n",
-       "      <td>6c3f029e-39d9-4c25-9c3e-52a6d09d0c3e</td>\n",
+       "      <td>dc4c7409-f01c-407b-a714-beaa7eca41d4</td>\n",
+       "      <td>d204aefd-1669-4045-bfbf-176dd70cfc7a</td>\n",
        "      <td>PMML</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2022-06-25 00:06:18.860</td>\n",
+       "      <td>604eb52c-a12f-440e-b013-57956dcec9d5</td>\n",
+       "      <td>2022-07-06 18:52:30.330</td>\n",
        "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -247,19 +256,19 @@
       ],
       "text/plain": [
        "                          model_version                              model_id  \\\n",
-       "0  f05681c6-de92-4ee5-a5af-d8c7e842dd0d  81ed9846-2d30-488b-ae0c-85df09376314   \n",
-       "1  7edae1b8-e60e-47f4-a497-b94f2958d5b9  6c3f029e-39d9-4c25-9c3e-52a6d09d0c3e   \n",
+       "0  152b6ef8-33a5-4740-b68b-093baad1284a  2a35e4bc-8a6d-4643-9bdd-dedbb73d28d5   \n",
+       "1  dc4c7409-f01c-407b-a714-beaa7eca41d4  d204aefd-1669-4045-bfbf-176dd70cfc7a   \n",
        "\n",
        "  model_type                            project_id             deployed_at  \\\n",
-       "0       PMML  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2022-04-20 20:30:04.130   \n",
-       "1       PMML  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2022-06-25 00:06:18.860   \n",
+       "0       ONNX  604eb52c-a12f-440e-b013-57956dcec9d5 2022-07-06 18:50:30.730   \n",
+       "1       PMML  604eb52c-a12f-440e-b013-57956dcec9d5 2022-07-06 18:52:30.330   \n",
        "\n",
        "                                                                                                                                                                                                                                                       model  \n",
-       "0  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\r\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\r\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\r\\n        <Application name=\"Nyoka\" version=\"4.3.0\"...  \n",
+       "0  b'\\x08\\x08\\x12\\x08skl2onnx\\x1a\\x061.10.3\"\\x07ai.onnx(\\x002\\x00:\\xc8\\xa7\\x08\\n\\xb5\\x01\\n\\x0bNumTimesPrg\\n\\x03Age\\n\\tPlGlcConc\\n\\x06BloodP\\n\\tSkinThick\\n\\rTwoHourSerIns\\n\\x03BMI\\n\\tDiPedFunc\\x12\\x0cconcatenated\\x1a\\x11FeatureVectorizer\"\\x11FeatureV...  \n",
        "1  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +713,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aoa.stats.stats import _capture_stats, _NpEncoder\n",
+    "import json\n",
+    "import logging\n",
+    "import sys\n",
+    "\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
+    "\n",
+    "\n",
+    "train_df = DataFrame.from_query(\"\"\"\n",
+    "SELECT \n",
+    "    F.*, D.hasdiabetes \n",
+    "FROM pima_patient_features F\n",
+    "JOIN pima_patient_diagnoses D\n",
+    "    ON F.patientid = D.patientid \n",
+    "    WHERE F.patientid MOD 5 <> 0\n",
+    "\"\"\")\n",
+    "\n",
+    "data_stats = _capture_stats(df=train_df,\n",
+    "                            features=features,\n",
+    "                            targets=[target],\n",
+    "                            categorical=[target],\n",
+    "                            feature_metadata_fqtn=f\"{database}.aoa_feature_metadata\")\n",
+    "\n",
+    "with open(\"data_stats.json\", 'w+') as f:\n",
+    "    json.dump(data_stats, f, indent=2, cls=_NpEncoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,24 +872,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   PatientId  HasDiabetes                                                                   json_report\n",
-      "0        690            0    {\"output_probability\":[{\"0\":0.9209074,\"1\":0.07909262}],\"output_label\":[0]}\n",
-      "1        600            0   {\"output_probability\":[{\"0\":0.9766014,\"1\":0.023398578}],\"output_label\":[0]}\n",
-      "2          5            0   {\"output_probability\":[{\"0\":0.9863973,\"1\":0.013602674}],\"output_label\":[0]}\n",
-      "3          0            1    {\"output_probability\":[{\"0\":0.14025849,\"1\":0.8597415}],\"output_label\":[1]}\n",
-      "4        345            0    {\"output_probability\":[{\"0\":0.7780857,\"1\":0.22191429}],\"output_label\":[0]}\n",
-      "5        265            0   {\"output_probability\":[{\"0\":0.78800213,\"1\":0.21199787}],\"output_label\":[0]}\n",
-      "6        530            0  {\"output_probability\":[{\"0\":0.97246957,\"1\":0.027530432}],\"output_label\":[0]}\n",
-      "7        305            0    {\"output_probability\":[{\"0\":0.8996898,\"1\":0.10031021}],\"output_label\":[0]}\n",
-      "8         40            0     {\"output_probability\":[{\"0\":0.6889212,\"1\":0.3110788}],\"output_label\":[0]}\n",
-      "9        120            1    {\"output_probability\":[{\"0\":0.07093549,\"1\":0.9290645}],\"output_label\":[1]}\n"
+      "INFO:aoa.util.connections:teradataml context already exists. Skipping create_context.\n",
+      "INFO:aoa.stats.stats:Computing evaluation dataset statistics\n"
      ]
     },
     {
@@ -877,10 +910,9 @@
     "\"\"\"\n",
     "\n",
     "feature_metadata =  {\n",
-    "    \"database\": \"AOA_MASTER\",\n",
+    "    \"database\": database,\n",
     "    \"table\": \"aoa_feature_metadata\"\n",
     "}\n",
-    "hyperparams = {\"max_depth\": 5, \"eta\": 0.2}\n",
     "\n",
     "entity_key = \"PatientId\"\n",
     "target_names = [\"HasDiabetes\"]\n",
@@ -892,7 +924,7 @@
     "                           target_names=target_names,\n",
     "                           feature_metadata=feature_metadata)\n",
     "\n",
-    "ctx = ModelContext(hyperparams=hyperparams,\n",
+    "ctx = ModelContext(hyperparams={},\n",
     "                   dataset_info=dataset_info,\n",
     "                   artifact_output_path=\"/tmp\",\n",
     "                   artifact_input_path=\"./\",\n",
@@ -904,13 +936,20 @@
     "# get_context().execute(f\"DROP TABLE byom_models_tmp\")\n",
     "evaluate(context=ctx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python [conda env:aoa] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-aoa-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -922,7 +961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
