--- a/model_definitions/python-diabetes/notebooks/Operationalize.ipynb
+++ b/model_definitions/python-diabetes/notebooks/Operationalize.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2cc300ea-a0dc-4222-b012-3f8d80786835",
    "metadata": {},
    "source": [
     "# Overview\n",
@@ -13,8 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1e566a11-2528-40a2-a65c-389bbca40b51",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,15 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "60aff283-9b07-4d24-ab97-c0a6a589d35d",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "password ··········\n"
+      "Usernamewf250003\n",
+      "password········\n"
      ]
     }
    ],
@@ -44,12 +42,14 @@
     "username = input(\"Username\")\n",
     "password = getpass.getpass(\"password\")\n",
     "\n",
+    "# by default we assume your are using your user database. change as required\n",
+    "database = username\n",
+    "\n",
     "engine = create_context(host=\"3.238.151.85\", username=username, password=password, logmech=\"TDNEGO\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eef19ffe-bb8c-4880-9f2e-10f9afc8df91",
    "metadata": {},
    "source": [
     "### Define Training Function\n",
@@ -73,8 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "cd4d947e-3c04-450f-9b01-be1eccb4595e",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,8 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "3dbe1f50-6496-4d1f-be54-f351043d9aaf",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +186,7 @@
     "\"\"\"\n",
     "\n",
     "feature_metadata =  {\n",
-    "    \"database\": \"AOA_MASTER\",\n",
+    "    \"database\": database,\n",
     "    \"table\": \"aoa_feature_metadata\"\n",
     "}\n",
     "hyperparams = {\"max_depth\": 5, \"eta\": 0.2}\n",
@@ -215,7 +213,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e84ecd74-f5c6-411f-bb96-84cdacd4ca18",
    "metadata": {},
    "source": [
     "### Define Evaluation Function\n",
@@ -239,8 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "af07d8e1-4bf6-4b6b-9951-4539e6e416ed",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,8 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "a8340a29-ef25-4ab0-84b6-8057c659cbad",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -332,8 +327,20 @@
      "output_type": "stream",
      "text": [
       "INFO:aoa.util.connections:teradataml context already exists. Skipping create_context.\n",
-      "Scoring\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.ticker.AutoLocator object at 0x7fc79f609940>\n",
+      "Scoring\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting feature_perturbation = \"tree_path_dependent\" because no background data was given.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "INFO:aoa.stats.stats:Computing evaluation dataset statistics\n"
      ]
     },
@@ -388,7 +395,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89d27a19-aa56-4103-9024-78e0e9aa6cc4",
    "metadata": {},
    "source": [
     "### Define Scoring Function\n",
@@ -412,8 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "0a98f24f-e0ea-452b-b4e2-72a61f13fa56",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,8 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3a72a3a4-5727-434d-b121-e1e8d1f83e0e",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +524,7 @@
     "\n",
     "# where to store predictions\n",
     "predictions = {\n",
-    "    \"database\": \"AOA_MASTER\",\n",
+    "    \"database\": database,\n",
     "    \"table\": \"pima_patient_predictions_tmp\"\n",
     "}\n",
     "\n",
@@ -547,7 +551,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce1cc10-53db-4db7-9ca5-1530e0fcab5c",
    "metadata": {},
    "source": [
     "### Define Model Metadata\n",
@@ -582,7 +585,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4221d157-d18c-46de-8578-4e90219199da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -590,9 +592,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python [conda env:aoa] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-aoa-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -604,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
